[tool.poetry]
name = "run-planner"
version = "0.1.0"
description = "Packaches used for run planner"
authors = ["dessertivore"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
celery = "^5.3.6"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
black = "^24.1.1"
mypy = "^1.8.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
